Dissallow headless browser being backgrounded on Mac

Bug: 741689
Change-Id: I403a263af0a52cfa4c5ea494a9bdd992b0b36b16
Reviewed-on: https://chromium-review.googlesource.com/582036
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Commit-Queue: David Vallet <dvallet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488926}