headless/lib/browser/headless_browser_impl_mac.mm
@@ -11,9 +11,24 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace headless {
 
+namespace {
+
+NSString* const kActivityReason = @"Batch headless process";
+const NSActivityOptions kActivityOptions =
+    (NSActivityUserInitiatedAllowingIdleSystemSleep |
+     NSActivityLatencyCritical) &
+    ~(NSActivitySuddenTerminationDisabled |
+      NSActivityAutomaticTerminationDisabled);
+
+}  // namespace
+
 void HeadlessBrowserImpl::PlatformInitialize() {}
 
-void HeadlessBrowserImpl::PlatformStart() {}
+void HeadlessBrowserImpl::PlatformStart() {
+  // Disallow headless to be throttled as a background process.
+  [[NSProcessInfo processInfo] beginActivityWithOptions:kActivityOptions
+                                                 reason:kActivityReason];
+}
 
 void HeadlessBrowserImpl::PlatformInitializeWebContents(
     HeadlessWebContentsImpl* web_contents) {
